Fixes login/register page alignment on my screen

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -59,7 +59,7 @@ body {
 
 
 .login-main-text{
-  margin-top: 20%;
+  margin-top: 10%;
   padding: 60px;
   color: #fff;
 }
